<resources>
    <string name="app_name">T07P02</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="preferencias">Preferencias</string>
    <string name="cerrarSesion">Cerrar sesion</string>
    <string name="activarGPS">Activar/desactivar GPS</string>
    <string name="logIn">Login</string>
    <string name="entrar">Entrar</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombre">Nombre </string>
    <string name="passWord">Contraseña </string>
    <string name="URLBD">URL base de datos</string>
    <string name="DURLBD">Direccion para la conexion de base de datos del registro</string>
    <string name="UserBD">Usuario de base de datos</string>
    <string name="DUserBD">Nombre del usuario de base de datos(No del usuario de registro de GPS)</string>
    <string name="PassWBD">Contraseña base de datos</string>
    <string name="DPassWBD">Indique la contraseña del usuario de base de datos</string>
    <string name="indroduzcaNombreYContrasenia">Debe indroducir un usuario y una contraseña</string>
    <string name="indroduzcaNombre">Debe indroducir un usuario</string>
    <string name="indroduzcaContrasenia">Debe indroducir una contraseña</string>
    <string name="eRConexion">Error en la conexion</string>
    <string name="errorExisteUsuario">Error: Existe el usuario</string>
    <string name="errorNoExisteUsuario">Error: No Existe el usuario</string>
    <string name="errorPsIncorrecta">Error: contraseña incorrecta</string>
    <string name="altaUsuarioCorrecta">Alta de usuario correcta</string>
    <string name="altaUsuarioInCorrecta">Alta de usuario incorrecta</string>
    <string name="actualizarPosiciones">Actualizar Posiciones</string>
    <string name="registrandoSuposicion">Registrando su posicion</string>
    <string name="dRegistrandoSuposicion">Enviando datos de su posicion al servidor</string>
    <string name="pEegistrandoSuposicion">Se ha dejado de registrar su posicion</string>
    <string name="dPRegistrandoSuposicion">Se ha dejado de enviar informacion de su ubicacion a servidor</string>
    <string name="iMapaActualizado">Mapa actualizado</string>
    <string name="cambioPs">Cambiar contraseña del usuario</string>
    <string name="dCambioPs">Establece una nueva contraseña para su usuario</string>
    <string name="psActualizada">Contraseña Cambiada</string>
    <string name="tActualizacion">Tasa de actualizacion</string>
    <string name="dTActualizacion">Tiempo entre actualizacion y actualiacion</string>
    <string name="distActualiacion">Distancia actualizacion</string>
    <string name="dDistActualiacion">Indica la cantidad de metros entre cada actualizacion</string>
    <string name="baseDeDatos">Base de datos</string>
    <string name="preferenciasUsuario">Opciones del usuario</string>
    <string name="nTActualizacion">Tasa Actualizacion: </string>
    <string name="nDisActualizacion">Distancia Actualizacion: </string>
    <string name="diferenciaParaActualizar">Cantidad de grados para actualizar poscion</string>
    <string name="dDiferenciaParaActualizar">Indica la cantidad de grados a los que se actualiza su posicion en la base de datos</string>
    <string name="otrasOpciones">Otras opciones</string>
    <string name="tipoDeMapa">Tipo de mapa</string>

    <string name="apiKey">AIzaSyC-tCXy52yGYTyU62O1E5lJjg4n2mvW8sE</string>
    <string name="dataBaseURL">jdbc:mysql://sql2.freesqldatabase.com:3306/</string>
    <string name="dataUser">sql2106998</string>
    <string name="dataPassword">wR7!vS4%</string>

    <array name="listaMapas">
        <item>None</item>
        <item>Normal</item>
        <item>Hybrid</item>
        <item>Satelite</item>
        <item>Terrain</item>
    </array>

</resources>
